# sremote

./: .gitignore  Cargo.toml  README.md  build.bat  errors.json  test.rs
broker/: Cargo.toml
broker/src/: main.rs
console/: app.js  index.html
daemon/: Cargo.toml  query
daemon/src/: capture.rs  control.rs  encoder.rs  hw_capture.rs  main.rs  session.rs  test_variant.rs
