[package]
name    = "broker"
version = "1.0.0"
edition = "2021"

[[bin]]
name = "broker"
path = "src/main.rs"

[dependencies]
axum              = { version = "0.7", features = ["ws"] }
tokio             = { version = "1",   features = ["full"] }
serde             = { version = "1",   features = ["derive"] }
serde_json        = "1"
jsonwebtoken      = "9"
futures           = "0.3"
dotenvy           = "0.15"
tracing           = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tower-http        = { version = "0.5", features = ["cors"] }
