[package]
name    = "broker"
version = "1.1.0"
edition = "2021"

[[bin]]
name = "broker"
path = "src/main.rs"

[dependencies]
# ─── Web / Async runtime ───────────────────────────────────────────────────────
axum              = { version = "0.7", features = ["ws"] }
tokio             = { version = "1",   features = ["full"] }
futures           = "0.3"
tower-http        = { version = "0.5", features = ["cors"] }

# ─── Serialization ────────────────────────────────────────────────────────────
serde             = { version = "1",   features = ["derive"] }
serde_json        = "1"

# ─── Auth / JWT ───────────────────────────────────────────────────────────────
jsonwebtoken      = "9"

# ─── Utilities ────────────────────────────────────────────────────────────────
dotenvy           = "0.15"
tracing           = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
base64            = "0.22"
anyhow            = "1"

# ─── IronRDP Stack ────────────────────────────────────────────────────────────
# Meta crate (re-exports sub-crates)
ironrdp           = { version = "0.14", features = ["connector", "session", "graphics", "input"] }
# Sub-crates explicitly (needed for direct access to APIs)
ironrdp-blocking  = "0.8"
ironrdp-connector = "0.8"
ironrdp-session   = "0.8"
ironrdp-graphics  = "0.7"
ironrdp-pdu       = "0.7"
# NOTE: ironrdp-input 0.5 has NO fast_path module; input PDUs live in ironrdp-pdu

# ─── CredSSP / NLA — must match ironrdp-connector 0.8's requirement ──────────
sspi              = { version = "0.18", features = ["network_client"] }

# ─── TLS — direct rustls (used synchronously in blocking RDP thread) ──────────
rustls            = "0.23"
x509-cert         = "0.2"

# ─── Frame encoding: WebP lossless (crisp text, no JPEG ringing artefacts) ────
webp              = "0.3"
