[package]
name    = "daemon"
version = "1.0.0"
edition = "2021"

[[bin]]
name = "daemon"
path = "src/main.rs"

[dependencies]
# ── WebRTC ──────────────────────────────────────────────────────────────────
webrtc         = "0.11"

# ── Hardware acceleration (DXGI & Media Foundation) ─────────────────────────
windows = { version = "0.52", features = [
    "Win32_Graphics_Direct3D",
    "Win32_Graphics_Direct3D11",
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_Dxgi_Common",
    "Win32_Graphics_Gdi",
    "Win32_Media_MediaFoundation",
    "Win32_System_Com",
    "Win32_System_Variant",
    "Win32_System_Ole",
    "Win32_Foundation",
] }

# ── Image / pixel utilities ──────────────────────────────────────────────────
image          = { version = "0.25", default-features = false, features = ["png"] }
bytes          = "1"

# ── Mouse / keyboard control ────────────────────────────────────────────────
enigo          = "0.2"

# ── JWT generation (daemon mints its own token) ───────────────────────────────
jsonwebtoken   = "9"

# ── Misc ─────────────────────────────────────────────────────────────────────
dotenvy           = "0.15"
url               = "2"
tracing           = "0.1"
tracing-subscriber = "0.3"
anyhow            = "1"

# ── Windows Service integration ──────────────────────────────────────────────
[target.'cfg(windows)'.dependencies]
windows-service = "0.6"

# ── Async / networking ───────────────────────────────────────────────────────
[dependencies.tokio]
version  = "1"
features = ["full"]

[dependencies.tokio-tungstenite]
version  = "0.21"
features = ["native-tls"]

[dependencies.tungstenite]
version = "0.21"

[dependencies.futures-util]
version = "0.3"

# ── Serialisation ────────────────────────────────────────────────────────────
[dependencies.serde]
version  = "1"
features = ["derive"]

[dependencies.serde_json]
version = "1"
