[package]
name    = "daemon"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "daemon"
path = "src/main.rs"

[dependencies]
anyhow            = "1"
bytes             = "1"
dotenvy           = "0.15"
enigo             = "0.2"
futures-util      = "0.3"
jsonwebtoken      = "9"
serde             = { version = "1", features = ["derive"] }
serde_json        = "1"
tokio             = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.21", features = ["native-tls"] }
tracing           = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
webrtc            = "0.11"
windows           = { version = "0.52", features = [
    "Win32_Graphics_Direct3D",
    "Win32_Graphics_Direct3D_Fxc",
    "Win32_Graphics_Direct3D11",
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_Dxgi_Common",
    "Win32_Graphics_Gdi",
    "Win32_Media_MediaFoundation",
    "Win32_Media_DirectShow",
    "Win32_System_Com",
    "Win32_System_Ole",
    "Win32_System_Variant",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Foundation",
] }
rayon             = "1.10"
webrtc-media      = "0.8"
windows-service   = "0.6"
